# plutus-crowdfunding

./: cabal.project  default.nix  plutus-crowdfunding.cabal  release.nix  shell.nix
examples/src/Plutus/Contracts/: Game.hs
examples/test/: Spec.hs
examples/test/Spec/: Game.hs
nix/: default.nix  sources.json
nix/pkgs/haskell/: haskell.nix
pab/: Main.hs
src/: Main.hs
src/Plutus/Contracts/: Crowdfunding.hs
test/: Spec.hs
test/Spec/: Crowdfunding.hs  Model.hs  crowdfunding.pir
