cabal-version: 2.4
name:          plutus-crowdfunding
version:       0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:       Apache-2.0
license-files: LICENSE
author:        Gergely Szabo
maintainer:    gege251@mailbox.org

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:  Plutus.Contracts.Crowdfunding
  build-depends:
    , aeson
    , base               >=4.9 && <5
    , time
    , relude
    , bytestring
    , containers
    , freer-extras
    , playground-common
    , plutus-contract
    , plutus-ledger
    , plutus-tx
    , plutus-tx-plugin

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

-- See Plutus Tx readme
test-suite plutus-crowdfunding-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    Spec.Crowdfunding
  default-language: Haskell2010
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -rtsopts -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas

  -- See Plutus Tx readme
  build-depends:
    , plutus-contract
    , plutus-ledger
    , plutus-crowdfunding
    , plutus-tx
    , plutus-tx-plugin

  build-depends:
    , base            >=4.9     && <5
    , relude
    , tasty
    , tasty-hedgehog  >=0.2.0.0
    , tasty-hunit
    , lens

executable plutus-crowdfunding-pab
  main-is:        Main.hs
  hs-source-dirs: pab
  ghc-options:    -threaded
  default-language: Haskell2010
  build-depends:
    , aeson
    , base             >=4.9 && <5
    , relude
    , data-default
    , freer-extras
    , freer-simple
    , plutus-contract
    , plutus-ledger
    , plutus-pab
    , plutus-crowdfunding
    , prettyprinter
